<resources>
    <string name="app_name">SupWallet</string>
    <string name="Next">Next</string>
    <string name="Skip">Skip</string>
    <string name="slider1_text">Thank You for choosing SupCoin!</string>
    <string name="slider_2_text">Send Money Globally with ease!</string>
    <string name="slider_3_text">Secure and Decentralized. Enjoy!</string>
    <string name="buy_text">BUY SUPCOIN</string>
    <string name="token_string">SPC</string>
    <string name="card_public_info">Your Public SupCoin address</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="network_title">Network</string>
    <string name="backup_title">Backup</string>
    <string name="connected_to_text">Connected To:</string>
    <string name="none_connected">None</string>
    <string name="other_available_nodes">Other available nodes:</string>
    <string name="connect">Connect</string>
    <string name="unreachable">Unreachable</string>
    <string name="waiting">Waiting</string>
    <string name="loading">loading</string>
    <string name="no_data_available">No Other Peers Available</string>
    <string name="available_coins_on_node">Coins on node connected</string>
    <string name="change_node">Change Node</string>
    <string name="amount_to_buy">Amount To Buy:</string>
    <string name="nil">nil</string>
    <string name="send">SEND</string>
</resources>
